# Cancer-Prediction-with-Python

./: Makefile  README.md  pyproject.toml  requirements.txt
cancer_prediction_with_python/: dataset.py  plots.py  train.py
models/: decision_tree_model.pkl
notebooks/: NoteBook.ipynb
