[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cancer_prediction_with_python"
version = "0.0.1"
description = "a hands-on project using logistic regression for breast cancer prediction. We will be using a breast cancer dataset to build a logistic regression model that accurately predicts if a cancer is malignant or not based on certain measurements"
authors = [
  { name = "omar badr" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=12.3.0"


[tool.ruff]
line-length = 99
src = ["cancer_prediction_with_python"]
include = ["pyproject.toml", "cancer_prediction_with_python/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cancer_prediction_with_python"]
force-sort-within-sections = true

